# IOT_Hoshiden

Backup/IOT_Hoshiden_13012025/: CMakeLists.txt
Backup/IOT_Hoshiden_13012025/main/: IO.c  TCP.c  app_main.cpp  flag.h  socketioclient_api.cpp  socketioclient_api.h
DOC-SE_IOC_21/TEST_HARDWARE/: TEST_HARDWARE.ino
Firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/component/ETH_W5500/: CMakeLists.txt  ETH_W5500.c  ETH_W5500.h
Firmware/component/IEC_Timer/: CMakeLists.txt  IEC_Timer.c
Firmware/component/socketIO-esp-idf/: CMakeLists.txt
Firmware/component/socketIO-esp-idf/src/: wificlient.c  (+1 more)
Firmware/main/: CMakeLists.txt  Ethernet.c  Ethernet.h  IEC_Timer.h  IO.c  IO.h  TCP.c  TCP.h  app_main.cpp  idf_component.yml  main.h
IOT_Hoshiden/: .gitmodules  sdkconfig
IOT_Hoshiden/main/: CMakeLists.txt  IO.c  IO.h  TCP.c  TCP.h  app_main.cpp  flag.h  main.h  socketioclient_api.cpp
IOT_Hoshiden_V100/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
IOT_Hoshiden_V100/component/socketIO-esp-idf/: CMakeLists.txt
IOT_Hoshiden_V100/main/: CMakeLists.txt  IO.c  app_main.cpp  datatype.h  flag.h  main.h  socketioclient_api.cpp  socketioclient_api.h
IOT_Hoshiden_V100_W5500/: CMakeLists.txt  sdkconfig  sdkconfig.old
IOT_Hoshiden_V100_W5500/component/socketIO-esp-idf/: CMakeLists.txt
IOT_Hoshiden_V100_W5500/component/socketIO-esp-idf/include/: ethernetclient.h
IOT_Hoshiden_V100_W5500/component/socketIO-esp-idf/src/: ethernetclient.cpp
IOT_Hoshiden_V100_W5500/main/: CMakeLists.txt  IO.h  app_main.cpp  main.h  ota.c  socketioclient_api.h
(+12 files in other folders)
